--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;700&display=swap');
+
 
 .container {
     width: 100%;
@@ -6,9 +8,14 @@
 }
 
 h2 {
+    position: relative;
     color: #2a70b9;
-    font: normal bold 18px 'Arial', sans-serif;
+    font: normal bold 18px 'Work Sans', sans-serif;
     text-transform: uppercase;
+    background: #fff;
+    z-index: 1;
+    border-bottom: 1px solid #2a70b9;
+    padding-bottom: 8px;
 }
 
 .hide {
@@ -22,8 +29,8 @@ h2 {
 }
 
 label, span {
-    font: normal bold 15px 'Arial', sans-serif;
-    color: #2b2b29;
+    font: normal bold 15px 'Work Sans', sans-serif;
+    color: #4e4e4e;
     margin-right: 20px;
 }
 
