--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,19 @@ h2 {
     text-transform: uppercase;
 }
 
+.list li {
+    list-style-type: none;
+    font: normal bold 15px 'Work Sans', sans-serif;
+    color: #4e4e4e;
+    margin-bottom: 8px;
+}
+
+.list h2 {
+    color: #2a70b9;
+    padding-top: 10px;
+    margin-bottom: 5px;
+}
+
 .submit_wrapper {
     position: fixed;
     bottom: 0;
